--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>ホーム</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4146523089" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4168769816" id="pagesheet"/>
    </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- column -->
-   <div class="position_content" id="page_position_content">
-    <div class="clip_frame colelem" id="u123"><!-- image -->
-     <img class="block" id="u123_img" src="images/%e3%82%a2%e3%83%bc%e3%83%88%e3%83%9c%e3%83%bc%e3%83%89%201.png?crc=3966198011" alt="" width="982" height="696"/>
-    </div>
-    <div class="verticalspacer" data-offset-top="758" data-content-above-spacer="788" data-content-below-spacer="92"></div>
+  <div class="clearfix" id="page"><!-- group -->
+   <div class="clip_frame grpelem" id="u123"><!-- image -->
+    <img class="block" id="u123_img" src="images/%e3%82%a2%e3%83%bc%e3%83%88%e3%83%9c%e3%83%bc%e3%83%89%201.png?crc=3966198011" alt="" width="982" height="696"/>
    </div>
+   <a class="nonblock nontext grpelem" id="u200" href="%e5%90%8d%e7%a7%b0%e6%9c%aa%e8%a8%ad%e5%ae%9a-2.html"><!-- simple frame --></a>
+   <div class="verticalspacer" data-offset-top="758" data-content-above-spacer="788" data-content-below-spacer="92"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
